--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div id="app">
-        {{message}}
+        <ul>
+            <li v-for="mail in mails">
+                {{ mail.response }}
+            </li>
+        </ul>
 
     </div>
 
